# hello-rust

./: .gitignore  Cargo.toml  main.rs
.github/: ci.yml
.github/workflows/: ci.yml
