[package]
name = "hello-rust"
version = "0.1.0"
edition = "2021"
authors = ["KOSHIKAWA Kenichi"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { features = ["full"] }

[[bin]]
name = "hello-rust"
path = "main.rs"

[workspace]
